# fastcgiqt

./: CMakeLists.txt  CONFIGURATION  COPYING  COPYING.HEADER  DOCUMENTATION.txt  Doxyfile  Doxyfile.internal  FastCgiQt.pro  HTTPD_CONFIGURATION  INSTALL  LICENSE.FASTCGI  LICENSE.ISC  README.md  README.txt  TODO
docs/: httpd_configuration.txt
examples/: CMakeLists.txt  examples.pri  examples.pro
examples/BigWorld/: BigWorld.cpp  BigWorld.h  main.cpp
examples/Dumper/: Dumper.cpp  Dumper.h  Dumper.pro  main.cpp
examples/EmbedExample/: CMakeLists.txt  EmbedExample.cpp  EmbedExample.h  main.cpp
examples/GetGreeter/: GetGreeter.cpp  GetGreeter.h  GetGreeter.pro  main.cpp
examples/HelloWorld/: HelloWorld.cpp  HelloWorld.h  HelloWorld.pro  main.cpp
examples/PostGreeter/: PostGreeter.cpp  PostGreeter.h  PostGreeter.pro  main.cpp
examples/PostStreamExample/: PostStreamExample.cpp  PostStreamExample.h  main.cpp
examples/PrefixExample/: PrefixExample.cpp  PrefixExample.h  main.cpp
examples/ServiceExample/: ArticleService.cpp  ArticleService.h  IndexService.cpp  IndexService.h  ServiceExample.cpp  ServiceExample.h  ServiceExample.pro  main.cpp
examples/ThreadedDumper/: Dumper.cpp  Dumper.h  main.cpp
examples/XsltExample/: XsltExample.cpp  XsltExample.h  example.xsl  main.cpp
include/FastCgiQt/: AbstractMapper.h  AbstractResponder.h  BlockingResponder.h  Cache.h  CacheEntry.h  ClientIOInterface.h  Database.h  Manager.h  PostDataStreamReader.h  PrefixMapper.h  Request.h  Responder.h  Service.h  ServiceMapper.h  ThreadedResponder.h  XsltService.h
lib/: AbstractResponder.cpp  Base64Decoder.cpp  Base64Decoder.h  Base64Decoder_Private.cpp  Base64Decoder_Private.h  BeginRequestRecord.cpp  BeginRequestRecord.h  BlockingResponder.cpp  BlockingResponder_Private.cpp  BlockingResponder_Private.h  CMakeLists.txt  Cache.cpp  Cache.h  CacheBackend.cpp  CacheBackend.h  CacheEntry.cpp  CacheEntry.h  CacheEntryPrivate.cpp  CacheEntryPrivate.h  CacheEntryRef.cpp  CacheEntryRef.h  CachePrivate.cpp  CachePrivate.h  Caches.cpp  Caches.h  ClientIODevice.cpp  ClientIODevice.h  ClientIOInterface.cpp  CommunicationInterface.cpp  CommunicationInterface.h  CommunicationInterface_Worker.cpp  CommunicationInterface_Worker.h  Database.cpp  DatabaseGuard.cpp  DatabaseGuard.h  DatabasePrivate.h  DebugHandler.cpp  DebugHandler.h  EndRequestRecord.cpp  EndRequestRecord.h  (+107 more)
lib/docs/: coreGroup.dox  httpdConfiguration.dox  mainpage.dox  namespace.dox  pluginsGroup.dox  servicesGroup.dox
lib/plugins/: CMakeLists.txt  MemcachedCache.cpp  MemcachedCache.h  RamCache.cpp  RamCache.h
lib/plugins/CgiInterface/: CMakeLists.txt  CgiInterface.cpp  CgiInterface.h  CgiInterfaceFactory.cpp  CgiInterfaceFactory.h  CgiRequest.cpp  CgiRequest.h
lib/plugins/FastCgiInterface/: BeginRequestRecord.cpp  BeginRequestRecord.h  CMakeLists.txt  DebugHandler.cpp  DebugHandler.h  EndRequestRecord.cpp  FastCgiInterface.cpp  FastCgiInterface.h  FastCgiInterfaceFactory.cpp  FastCgiInterfaceFactory.h  FastCgiOutputBackend.cpp  FastCgiOutputBackend.h  FastCgiSocketManager.cpp  FastCgiSocketManager.h  FastCgiStream.cpp  FastCgiStream.h  ParametersRecord.cpp  ParametersRecord.h  RecordHeader.cpp  RecordHeader.h  SocketServer.h  SocketServer_tcp.cpp  SocketServer_unix.cpp  StandardOutputRecord.cpp  StandardOutputRecord.h  UnsignedByteArray.cpp  UnsignedByteArray.h
lib/plugins/HttpInterface/: CMakeLists.txt  HttpDaemon.cpp  HttpDaemon.h  HttpInterface.cpp  HttpInterface.h  HttpInterfaceFactory.cpp  HttpInterfaceFactory.h  HttpOutputBackend.cpp  HttpOutputBackend.h  HttpRequest.cpp  HttpRequest.h  SocketFlusher.cpp
lib/plugins/ScgiInterface/: CMakeLists.txt  ScgiInterface.cpp  ScgiInterface.h  ScgiInterfaceFactory.cpp  ScgiInterfaceFactory.h  ScgiRequest.cpp  ScgiRequest.h
src/: BeginRequestRecord.cpp  BeginRequestRecord.h  DebugHandler.cpp  DebugHandler.h  EndRequestRecord.h  EnumHelpers.cpp  EnumHelpers.h  FastCgiQt.pro  HelloWorld.cpp  HelloWorld.h  Listener.cpp  Listener.h  Manager.cpp  Manager.h  OutputDevice.cpp  ParametersRecord.cpp  ParametersRecord.h  RecordHeader.cpp  RecordHeader.h  Request.cpp  Request.h  Responder.cpp  Responder.h  StandardInputRecord.cpp  StandardOutputRecord.cpp  main.cpp
