PROJECT(FastCgiQt)
# Stop cmake 2.6 from whining
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
IF(COMMAND cmake_policy)
	CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})

# If building for release, don't include QDebug stuff
IF("x${CMAKE_BUILD_TYPE}" STREQUAL "x")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF()
IF("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
	ADD_DEFINITIONS("-DQT_NO_DEBUG_OUTPUT")
ELSE()
	IF(${CMAKE_COMPILER_IS_GNUCXX})
		ADD_DEFINITIONS("-Wall -Werror")
	ENDIF()
ENDIF()

# Find Qt4
FIND_PACKAGE( Qt4 REQUIRED )

SET(QT_DONT_USE_QTGUI TRUE)
SET(QT_USE_QTNETWORK TRUE)
SET(QT_USE_QTSQL TRUE)

# Include the cmake file needed to use qt4
INCLUDE( ${QT_USE_FILE} )

# Subdirs
ADD_SUBDIRECTORY(lib)
IF("${BUILD_EXAMPLES}" STREQUAL "")
	OPTION(BUILD_EXAMPLES "Build examples" ON)
ENDIF()
IF(BUILD_EXAMPLES)
	ADD_SUBDIRECTORY(examples)
ENDIF()
