SET(SUBDIRS
	Dumper
	GetGreeter
	HelloWorld
	PostGreeter
	ThreadedDumper
)

IF(WITH_SERVICE_SUPPORT)
	LIST(
		APPEND
		SUBDIRS
		ServiceExample
	)
ENDIF()

### don't edit below here ###

INCLUDE_DIRECTORIES(../include)

MACRO(BUILD_EXAMPLE EXAMPLE_NAME)
	SET(MOC_SOURCES)
	SET(HEADERS)
	SET(SOURCES)
	FILE(GLOB HEADERS ${EXAMPLE_NAME}/*.h)
	FILE(GLOB SOURCES ${EXAMPLE_NAME}/*.cpp)
	QT4_WRAP_CPP(MOC_SOURCES ${HEADERS})
	ADD_EXECUTABLE(${EXAMPLE_NAME} ${SOURCES} ${MOC_SOURCES})
	TARGET_LINK_LIBRARIES(${EXAMPLE_NAME} ${QT_LIBRARIES} FastCgiQt)
	SET_TARGET_PROPERTIES(${EXAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${EXAMPLE_NAME})
ENDMACRO()

FOREACH(subdir ${SUBDIRS})
	BUILD_EXAMPLE(${subdir})
ENDFOREACH()
