SET(QT_DONT_USE_QTGUI FALSE)
SET(QT_USE_QTWEBKIT TRUE)
INCLUDE(${QT_USE_FILE})

SET(EXAMPLE_NAME EmbedExample)

SET(MOC_SOURCES)
SET(HEADERS)
SET(SOURCES)
FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)
QT4_WRAP_CPP(MOC_SOURCES ${HEADERS})
ADD_EXECUTABLE(${EXAMPLE_NAME} ${SOURCES} ${MOC_SOURCES})
TARGET_LINK_LIBRARIES(${EXAMPLE_NAME} ${QT_LIBRARIES} FastCgiQt)
