SET(
	STATIC_PLUGINS
	RamCache
)

SET(
	SUBDIR_STATIC_PLUGINS
	FastCgiInterface
)

IF(WITH_MEMCACHED_SUPPORT)
	LIST(
		APPEND
		STATIC_PLUGINS
		MemcachedCache
	)
ENDIF()

# Probably don't want to edit below here


ADD_DEFINITIONS(-fPIC)
INCLUDE_DIRECTORIES(.. ../../include/FastCgiQt ${CMAKE_CURRENT_BINARY_DIR})

FOREACH(plugin ${STATIC_PLUGINS})
	SET(MOC_SOURCES)
	SET(SOURCES ${plugin}.cpp)
	QT4_WRAP_CPP(MOC_SOURCES ${plugin}.h)
	ADD_LIBRARY(
		${plugin}
		${SOURCES}
		${MOC_SOURCES}
	)
ENDFOREACH()

FOREACH(subdir ${SUBDIR_STATIC_PLUGINS})
	ADD_SUBDIRECTORY(${subdir})
ENDFOREACH()

SET(
	STATIC_PLUGINS
	${STATIC_PLUGINS}
	${SUBDIR_STATIC_PLUGINS}
	PARENT_SCOPE
)
